[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "yt-dlp>=2025.6.30",
    "uvicorn>=0.30.0",
    "requests[socks]>=2.31.0",
    "aiohttp>=3.12.14",
    "httpx>=0.28.1",
    "fake-useragent>=2.2.0",
    "requests-html>=0.10.0",
]
